fix system menu visibility at printing

--- a/src/index.css
+++ b/src/index.css
@@ -117,6 +117,10 @@ input:focus {
   }
 
   li:hover i.subicon {
-    visibility: hidden
+    visibility: hidden;
+  }
+
+  div.systemMenu {
+    visibility: hidden;
   }
 }
